twitter: fix spacing of tweets

--- a/css/default.scss
+++ b/css/default.scss
@@ -204,6 +204,8 @@ ul.contents {
         }
 
         color: black;
+
+        white-space: pre-wrap;
       }
     }
   }
